<resources>
    <string name="app_name">ScalesServerNet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scale_off">Выключение весов</string>
    <string name="OK">OK</string>
    <string name="Close">Закрыть</string>
    <string name="TEXT_MESSAGE">Весы перестанут работать</string>
    <string name="discovery_started">Поиск весов…</string>
    <string name="scales_list">Список весов</string>
    <string name="scales_kg">кг</string>
    <string name="search_log">Лог</string>
    <string name="preferences_yes">Установлено</string>
    <string name="preferences_no">Ошибка</string>
    <string name="preferences_error">Ошибка в настройках весов</string>
    <string name="device_found">Найдено устройство</string>
    <string name="input_check">Чек приход</string>
    <string name="NO_CONNECT">" нет соединения"</string>
    <string name="OVER_LOAD">ПЕРЕГРУЗ!!!</string>
    <string name="telephony_sim_no">SIM карта не установлена или не готова</string>
    <string name="bluetooth_on">Bluetooth включен</string>
    <string name="bluetooth_turning_on">Bluetooth включается</string>
    <string name="bluetooth_off">Bluetooth выключен</string>
    <string name="bluetooth_connected">Bluetooth соеденено</string>
    <string name="bluetooth_disconnected">Bluetooth разьеденено</string>
    <string name="BACK">НАЗАД</string>
    <string name="GROSS">БРУТТО:</string>
    <string name="TAPE">ТАРА:</string>
    <string name="About">О программе</string>
    <string name="CHECKS">ЧЕКИ</string>
    <string name="CONTACT">КОНТАКТЫ</string>
    <string name="SEARCH">ПОИСК</string>
    <string name="TYPE">ТОВАР</string>
    <string name="EXIT">ВЫХОД</string>
    <string name="Checks_closed">Чеки оформленые</string>
    <string name="Check_N">Чек №</string>
    <string name="Tape">Тара</string>
    <string name="Checks_unclosed">Чеки в работе</string>
    <string name="Gross">Брутто</string>
    <string name="Netto">Нетто</string>
    <string name="Sum">Сумма</string>
    <string name="image_about">Image About</string>
    <string name="des_image_remote">Индикатор связи</string>
    <string name="des_image_down">Выбор весового чека прихода(длинное нажатие)</string>
    <string name="press_again_to_exit">нажмите снова чтобы выйти</string>
    <string name="Vendor">Контакт:</string>
    <string name="Checks_send_count">"Чеков отправлено кол-во: "</string>
    <string name="Checks_not_send_count">"Не отправлено чеков кол-во: "</string>
    <string name="sent_to_the_server">" отправлен на диск"</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="name_scales">Имя весов</string>
    <string name="address_scales">Адрес весов</string>
    <string name="settings_port">НАСТРОЙКИ ПОРТА</string>
    <string name="setting_auto_zero">Авто ноль</string>
    <string name="Auto_zero">Авто ноль</string>
    <string name="sum_setting_auto_zero">Настройки авто ноль время, вес …</string>
    <string name="sum_auto_zero">Настройки определения сброса на ноль</string>
    <string name="Time">Время</string>
    <string name="sum_timer">Выключение весов при баздействии</string>
    <string name="weight">ВЕС</string>
    <string name="sum_weight">Предел авто ноля</string>
    <string name="Settings">Настройки</string>
    <string name="Timer_off">Время выключения:</string>
    <string name="measuring_step">Шаг взвешивания:</string>
    <string name="auto_capture">Автозахват:</string>
    <string name="removing_checks">Удалять чеки через:</string>
    <string name="closed_checks">Закрывать чеки через:</string>
    <string name="sum_removing_checks">Чеки будут удалятся из базы данных через … дней от даты создания чека</string>
    <string name="sum_closed_checks">Не закрытые чеки будут закрыватся через … дней от даты создания чека</string>
    <string name="zeroing">Установить Ноль</string>
    <string name="filter_adc">Фильтр АЦП:</string>
    <string name="sum_filter_adc">Чем больше число тем точнее, но медленей измерения.</string>
    <string name="about">О программе</string>
    <string name="minute">мин</string>
    <string name="sum_zeroing">Запомнить ноль весов</string>
    <string name="second">сек</string>
    <string name="sum_time_auto_zero">Время после которого весы автоматически обнуляются, максимальное значение</string>
    <string name="sum_max_null">Вес считается ошибкой ноля, максимальное значение</string>
    <string name="sum_delete_check">Удалять чеки через:</string>
    <string name="day">дней</string>
    <string name="version">Версия:</string>
    <string name="start_load">Начать загрузку</string>
    <string name="Date">Дата:</string>
    <string name="WEIGHT_CHECK_N">ВЕСОВОЙ ЧЕК №</string>
    <string name="New">Новый</string>
    <string name="All">Все</string>
    <string name="Goods">Товар:</string>
    <string name="Price">Цена:</string>
    <string name="Come_back">Вернутся назад</string>
    <string name="Send_messages">Послать сообщения</string>
    <string name="Photo">Фото</string>
    <string name="New_goods">Новый товар</string>
    <string name="Closed_search">Закрыть окно поиска</string>
    <string name="Menu_settings">Меню настроек</string>
    <string name="Open_search">Открыть поиск</string>
    <string name="Search_scale">Поиск весов</string>
    <string name="Add_contact">Добавить новый контакт</string>
    <string name="Mail">Отправить чек на почту</string>
    <string name="SMS">Отослать чек на СМС</string>
    <string name="terminal">Терминал:</string>
    <string name="Scale">Весы:</string>
    <string name="Version_scale">Версия прошивки весов: v.</string>
    <string name="Name_module_bluetooth">"Имя bluetooth: "</string>
    <string name="Address_bluetooth">"Адресс bluetooth: "</string>
    <string name="Operator">"Оператор связи: "</string>
    <string name="Number_phone">"Номер телефона: "</string>
    <string name="Battery">"Батарея: "</string>
    <string name="Temperature">"Температура: "</string>
    <string name="Coefficient">"Коэфициэнт: "</string>
    <string name="Table_google_disk">"Таблица Google Disk: "</string>
    <string name="User_google_disk">"User Google Disk: "</string>
    <string name="Off_timer">"Таймер выключения: "</string>
    <string name="MLW">"НПВ: "</string>
    <string name="Step_capacity_scale">"Шаг измерения веса: "</string>
    <string name="Capture_weight">"Захват взвешивания: "</string>
    <string name="Copyright">Авторские права принадлежат 2012–2016 Konst</string>
    <string name="Reserved">Все права защищены</string>
    <string name="Zeroing">"Обнуление…"</string>
    <string name="Contacts">Контакты</string>
    <string name="CHANGE">ИЗМЕНИТЬ</string>
    <string name="DELETE">УДАЛИТЬ</string>
    <string name="Removing">"Удаление: "</string>
    <string name="Do_you_want_to_remove">Вы хотите удалить?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="qty">" кол-во "</string>
    <string name="Check">Чек</string>
    <string name="range">"диапазон от "</string>
    <string name="to">" до "</string>
    <string name="The_range_is_from_1_to">"Диапазон от 1 до "</string>
    <string name="Range_between">"Диапазон между "</string>
    <string name="and">" и "</string>
    <string name="The_range_is_from_0_to">"Диапазон от 0 до "</string>
    <string name="Is_new_version">Есть новая версия микропрограиммы</string>
    <string name="Scale_update">"Весы обновлены до последней версии "</string>
    <string name="Connecting">"Соединяемся "</string>
    <string name="Error_connect">"Ошибка соединения"</string>
    <string name="not_scale">" это не весы"</string>
    <string name="Type">Тип</string>
    <string name="Enter_type">Введите Тип</string>
    <string name="Warning_Loading_settings">Внимание! Загрузка настроек</string>
    <string name="TEXT_MESSAGE1">На весах нажмине кнопку и отпустите ждите пока индикатор равномерно начнет мигать.
        После этого нажмите ОК
    </string>
    <string name="Warning_Error">Внимание! Ошибка</string>
    <string name="TEXT_MESSAGE2">Произошла ошибка программирования смотрите текст лога</string>
    <string name="Warning_Connect">Внимание! Соединение</string>
    <string name="TEXT_MESSAGE3">"Ищем фаил HEX для этого устройства "</string>
    <string name="Warning_update">Внимание! Обновление</string>
    <string name="TEXT_MESSAGE5">На весах нажмите кнопку и отпустите индикатор прекратит мигать. После этого нажмитеОК
    </string>
    <string name="Loading_settings">Загружаем настройки…</string>
    <string name="Settings_loaded">Настройки загружены!!!</string>
    <string name="Scale_no_defined">Весы не определены!!!</string>
    <string name="Setting_no_loaded">Настройки не загружены!!!</string>
    <string name="Not_programmer">Не программатор</string>
    <string name="Programmer_defined">Программатор определен</string>
    <string name="get_checks">получаем чеки…</string>
    <string name="Max_weight">"Максимальный вес: "</string>
    <string name="ConstantA">Константа А:</string>
    <string name="Table">"Таблица: "</string>
    <string name="TEXT_MESSAGE7">"Имя таблици spreadsheet в Google drive (таблица должна быть создана на Google drive) "</string>
    <string name="weighed">ЖДЕМ</string>
    <string name="No_data_check">Нет данных чек №</string>
    <string name="delete">" удален"</string>
    <string name="Contact">Контакт:</string>
    <string name="Send_mail">Отправить MAIL</string>
    <string name="Enter_address">Введите адрес</string>
    <string name="Send">Отправить</string>
    <string name="Save">Сохранить</string>
    <string name="TEXT_MESSAGE11">Email не сохранен. Нет контакта</string>
    <string name="Enter_phone">Введите телефон?</string>
    <string name="TEXT_MESSAGE12">Phone не сохранен. Нет контакта</string>
    <string name="Set_values">Установки значений</string>
    <string name="TEXT_MESSAGES13">Ограничения, лимиты, прочее</string>
    <string name="Update_scale">Обновление весов</string>
    <string name="TEXT_MESSAGE14">Обновление весов до последней версии</string>
    <string name="Send_to_mail">Отправлен на почту</string>
    <string name="Send_to_phone">Отправлен на телефон</string>
    <string name="Message_sent">Сообщение отправлено</string>
    <string name="Phone_for_sms">"Телефон для СМС: "</string>
    <string name="incoming">приход</string>
    <string name="outgo">расход</string>
    <string name="Scale_off">Выключение весов</string>
    <string name="TEXT_MESSAGE15">Вы действительно хотите выключить питание весов</string>
    <string name="checkbox_empty_summary">Снять галочки в контактах (выбор отправки на смс или почту весового чека)</string>
    <string name="checkbox_empty">Очистить в контактах</string>
    <string name="Clear_checkbox_dialog_message">"Вы действительно хотите очистить выбор для отправки весового чека на
        смс или почту в контактах. Если вы очистете, то весовой чек не будет отправлятся адресату (контакту) чека"</string>
    <string name="Cleaning">Очистка</string>
    <string name="send_weight_check">передать весовой чек</string>
    <string name="Off_scales">ВЫКЛЮЧИТЬ ВЕСЫ</string>
    <string name="text_setting_admin">Настройки для опытного пользователя</string>
    <string name="Test">Тест</string>
    <string name="sent_to_the_server_settings">Настройки отправлены на диск</string>
    <string name="KEY_SERIAL_FRAME">key_serial_frame</string>
    <string name="KEY_PARITY_BIT">key_parity_bit</string>
    <string name="KEY_STOP_BIT">key_stop_bit</string>
    <string name="KEY_FLOW_CONTROL">key_flow_control</string>
    <string name="Password_google_account">Password Google account</string>
    <string name="KEY_WIFI_SSID">key_wifi_ssid</string>
    <string name="KEY_WIFI_KEY">key_wifi_key</string>
    <string name="KEY_WIFI_LIST">key_wifi_list</string>
    <string name="KEY_WIFI_DEFAULT">key_wifi_default</string>
</resources>