<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="@string/information">
        <EditTextPreference android:title="@string/name_scales" android:key="@string/KEY_NAME"/>
        <Preference android:title="@string/address_scales" android:key="@string/KEY_ADDRESS" android:enabled="false"/>
    </PreferenceCategory>-->
    <PreferenceCategory android:title="@string/Settings">
        <PreferenceScreen android:title="@string/Set_values" android:summary="@string/TEXT_MESSAGES13">
            <PreferenceCategory android:title="@string/Settings">
                <PreferenceScreen android:title="@string/setting_auto_zero" android:summary="@string/sum_setting_auto_zero">
                    <PreferenceCategory android:title="@string/Auto_zero" android:summary="@string/sum_auto_zero">
                        <CheckBoxPreference android:enabled="true" android:title="Авто ноль" android:summary="Авто обнуление" android:key="@string/KEY_CHECK_AUTO_NULL" android:defaultValue="true"/>
                        <EditTextPreference android:title="@string/Time"
                                            android:summary="@string/sum_time_auto_zero"
                                            android:key="@string/KEY_TIMER_NULL"
                                            android:numeric="integer"
                                            android:inputType="number"/>
                        <EditTextPreference android:title="@string/weight"
                                            android:summary="@string/sum_weight"
                                            android:key="@string/KEY_MAX_NULL"
                                            android:numeric="integer"
                                            android:inputType="number"/>
                    </PreferenceCategory>
                </PreferenceScreen>
                <EditTextPreference android:title="@string/auto_capture"
                        android:key="@string/KEY_AUTO_CAPTURE"
                        android:inputType="number"/>
                <EditTextPreference android:title="@string/removing_checks"
                        android:summary="@string/sum_removing_checks"
                        android:key="@string/KEY_DAY_CHECK_DELETE"
                        android:numeric="integer"
                        android:inputType="number"/>
                <EditTextPreference android:title="@string/closed_checks"
                                    android:summary="@string/sum_closed_checks"
                                    android:numeric="integer"
                                    android:key="@string/KEY_DAY_CLOSED_CHECK"
                                    android:inputType="number"/>
                <Preference android:title="@string/checkbox_empty"
                            android:summary="@string/checkbox_empty_summary"
                            android:key="@string/KEY_EMPTY_CHECKBOX" />
            </PreferenceCategory>
        </PreferenceScreen>
        <!--<Preference android:title="Для администратора" android:key="@string/KEY_ADMIN"/>-->
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference android:title="@string/zeroing" android:key="@string/KEY_NULL" android:inputType="number"/>
        <Preference android:title="@string/Update_scale" android:summary="@string/TEXT_MESSAGE14" android:key="@string/KEY_UPDATE" android:enabled="false"/>
        <!--<Preference android:title="@string/about" android:key="@string/KEY_ABOUT"/>-->
    </PreferenceCategory>
</PreferenceScreen>