<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center" android:contentDescription="@null">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="@android:color/white">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:background="@color/background1"
                android:layout_margin="@dimen/padding">
            <ImageView
                    android:id="@+id/dialog_title_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_dialog_info" android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp" android:contentDescription="@null"/>
            <TextView
                    android:id="@+id/dialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" android:layout_gravity="center" android:layout_margin="@dimen/padding"
                    android:textIsSelectable="true"/>
        </LinearLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="3dip"
                android:background="#1e90ff" android:layout_marginLeft="@dimen/padding"
                android:layout_marginRight="@dimen/padding"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Скорость порта"
                        android:id="@+id/textView"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_large"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:layout_weight="1"/>

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextSpeedPort"
                        android:layout_gravity="center"
                        android:text="1235"
                        android:gravity="center_vertical|right"
                        android:textSize="@dimen/text_large"
                        android:singleLine="true"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Формат данных"
                        android:id="@+id/textView2"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_large"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:layout_weight="1"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="left|center_vertical"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Бит четности"
                        android:id="@+id/textView3"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_large"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:layout_weight="1"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner2"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="left|center_vertical"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Стоп бит"
                        android:id="@+id/textView4"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_large"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:layout_weight="1"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner3"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="left|center_vertical"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Флов контроль"
                        android:id="@+id/textView5"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_large"
                        android:gravity="left|center"
                        android:singleLine="true"
                        android:layout_weight="1"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner4"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="left|center_vertical"
                        android:layout_gravity="left|center_horizontal"
                        android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:background="@color/background1"
                android:layout_marginLeft="@dimen/padding" android:layout_marginRight="@dimen/padding"
                android:layout_marginBottom="@dimen/padding">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/padding">
                <ImageButton style="@style/CustomButtonImage" android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:text="@string/New" android:id="@+id/buttonSelectAll"
                             android:layout_weight="1"
                             android:src="@drawable/ic_action_check" android:clickable="true"/>
                <ImageButton style="@style/CustomButtonImage" android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:text="@string/All" android:id="@+id/buttonUnselect"
                             android:layout_weight="1" android:clickable="true" android:src="@drawable/ic_action_checkbox_empty"/>
                <ImageButton style="@style/CustomButtonImage" android:id="@+id/buttonBack"
                             android:layout_width="wrap_content" android:layout_height="match_parent"
                             android:text="@string/Close" android:layout_weight="1" android:clickable="true"
                             android:src="@drawable/ic_action_back"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>